name:                quotiented
version:             0.1.0.0
synopsis:            Quotient types using smart constructors and tagged types
description:         Please see README.md
homepage:            http://github.com/mstksg/quotiented#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Quotient
                     , Data.List.Quotient
                     , Numeric.Quotient
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , finite-typelits
  default-language:    Haskell2010

-- test-suite quotiented-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , quotiented
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/quotiented
